feat: added logic
added logic and made opening and closing

--- a/index.html
+++ b/index.html
@@ -1,53 +1,84 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/868a5b005d.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="main">
-        
+
         <div class="accordion-container">
             <div class="heading">
                 <h1>CSS BAYAN</h1>
             </div>
             <div class="first-cont">
-                <p>You cant just copy and paste CSS</p>
+                <label for="trig_1" class="clabel">
+                    <div class="text">
+                        <p>You cant just copy and paste CSS </p>
+                        <i class="fa-solid fa-x"></i>
+                    </div>
+                </label>
+                <input class="trig" type="checkbox" id="trig_1" checked>
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
             </div>
             <div class="first-cont">
-                <p>Keep calm and carry on</p>
+                <label for="trig_2" class="clabel">
+                    <div class="text">
+                        <p>Keep calm and carry on</p>
+                        <i class="fa-solid fa-x"></i>
+                    </div>
+                </label>
+                <input class="trig" type="checkbox" id="trig_2">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
             </div>
             <div class="first-cont">
-                <p>Work Life balance</p>
+                <label for="trig_3" class="clabel">
+                    <div class="text">
+                        <p>Work life balance</p>
+                        <i class="fa-solid fa-x"></i>
+                    </div>
+                </label>
+                <input class="trig" type="checkbox" id="trig_3">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
             </div>
             <div class="first-cont">
-                <p>Dude, where is JS?</p>
+                <label for="trig_4" class="clabel">
+                    <div class="text">
+                        <p>Dude where is JS?</p>
+                        <i class="fa-solid fa-x"></i>
+                    </div>
+                </label>
+                <input class="trig" type="checkbox" id="trig_4">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
             </div>
             <div class="first-cont">
-                <p>Relax and take it easy</p>
+                <label for="trig_5" class="clabel">
+                    <div class="text">
+                        <p>Relax and take it easy</p>
+                        <i class="fa-solid fa-x"></i>
+                    </div>
+                </label>
+                <input class="trig" type="checkbox" id="trig_5">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
             </div>
-        
         </div>
     </div>
 </body>
+
 </html>
