--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <i class="fa-solid fa-x"></i>
                     </div>
                 </label>
-                <input class="trig" type="checkbox" id="trig_1" checked>
+                <input class="trig" type="radio"  name="radio-group" id="trig_1" checked>
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
@@ -36,7 +36,7 @@
                         <i class="fa-solid fa-x"></i>
                     </div>
                 </label>
-                <input class="trig" type="checkbox" id="trig_2">
+                <input class="trig" type="radio"  name="radio-group" id="trig_2">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
@@ -48,7 +48,7 @@
                         <i class="fa-solid fa-x"></i>
                     </div>
                 </label>
-                <input class="trig" type="checkbox" id="trig_3">
+                <input class="trig" type="radio"  name="radio-group" id="trig_3">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
@@ -60,7 +60,7 @@
                         <i class="fa-solid fa-x"></i>
                     </div>
                 </label>
-                <input class="trig" type="checkbox" id="trig_4">
+                <input class="trig" type="radio"  name="radio-group" id="trig_4">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
@@ -72,7 +72,7 @@
                         <i class="fa-solid fa-x"></i>
                     </div>
                 </label>
-                <input class="trig" type="checkbox" id="trig_5">
+                <input class="trig" type="radio"  name="radio-group" id="trig_5">
                 <div class="hide">
                     <img src="pic.jpg" alt="">
                 </div>
