fix: corrections for pixelP
Did corrections in order to mathc pixel perfect

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <label for="trig_1" class="clabel">
                     <div class="text">
                         <p>You cant just copy and paste CSS </p>
-                        <i class="fa-solid fa-x"></i>
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-x" id="x"></i>
                     </div>
                 </label>
                 <input class="trig" type="radio"  name="radio-group" id="trig_1" checked>
@@ -33,7 +34,8 @@
                 <label for="trig_2" class="clabel">
                     <div class="text">
                         <p>Keep calm and carry on</p>
-                        <i class="fa-solid fa-x"></i>
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-x" id="x"></i>
                     </div>
                 </label>
                 <input class="trig" type="radio"  name="radio-group" id="trig_2">
@@ -45,7 +47,8 @@
                 <label for="trig_3" class="clabel">
                     <div class="text">
                         <p>Work life balance</p>
-                        <i class="fa-solid fa-x"></i>
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-x" id="x"></i>
                     </div>
                 </label>
                 <input class="trig" type="radio"  name="radio-group" id="trig_3">
@@ -57,7 +60,8 @@
                 <label for="trig_4" class="clabel">
                     <div class="text">
                         <p>Dude where is JS?</p>
-                        <i class="fa-solid fa-x"></i>
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-x" id="x"></i>
                     </div>
                 </label>
                 <input class="trig" type="radio"  name="radio-group" id="trig_4">
@@ -69,7 +73,8 @@
                 <label for="trig_5" class="clabel">
                     <div class="text">
                         <p>Relax and take it easy</p>
-                        <i class="fa-solid fa-x"></i>
+                        <i class="fa-solid fa-plus" id="pl"></i>
+                        <i class="fa-solid fa-x" id="x"></i>
                     </div>
                 </label>
                 <input class="trig" type="radio"  name="radio-group" id="trig_5">
@@ -79,6 +84,13 @@
             </div>
         </div>
     </div>
+
+    <select name="asdas" id="" option="multiple">
+        asdasasds
+        asdasasdsasd
+        asds
+    </select>
 </body>
 
 </html>
+
